# bbq

./: .claudeignore  README.md  session_stats.py
agente/: .env.example  .gitignore  README.md  bloomberg_watcher.bat  bqlData.bat  desk.bat  live.bat  macroDesk.bat  morning_ingest.bat  pyproject.toml  run_daily.bat  serve.bat  streamlit_app.py
agente/app/: query_layer.py
agente/app/analysis/: __init__.py  alpha_signals.py  chart_regime.py  charts.py  decision_log.py  desk_intelligence.py  earnings_filter.py  flow_patrol_charts.py  flow_patrol_parser.py  monte_carlo.py  narrative_alpha.py  narrative_classifier.py  network.py  network_live.py  options_strategy.py  pairs_trading.py  portfolio_optimizer.py  portfolio_tracker.py  probabilistic.py  relative_strength.py  risk.py  scenarios.py  technical.py  technical_tv.py  tv_zone_filter.py  vix_vrs_chart.py  vix_vrs_regime.py  vol_options_regime.py  vol_regime.py
agente/app/audit/: logger.py  records.py
agente/app/auth/: bootstrap.py  browser_profile.py  session_manager.py  validators.py
agente/app/cli/: auth.py  feedback.py  invest.py  live.py  report.py  run.py  sources.py
agente/app/config/: settings.py
agente/app/curation/: __init__.py  corpus.py  corrections.py  evidence_gatherer.py  investment_agent.py  isq.py  llm_client.py  models.py  narrative_detector.py  narrative_tracker.py  orchestrator.py  persona.py  scorer.py  verifier.py  writer.py
agente/app/desk/: graph_engine.py  node_registry.py
agente/app/models/: __init__.py  audit_record.py  daily_ingestion_bundle.py  evidence_item.py  isq_signal.py  market_ear_block.py  market_scenario.py  rss_item.py  signal_candidate.py  source_document.py  spotgamma_report.py  x_timeline_item.py
agente/app/pipeline/: ingestion.py  portfolio_pipeline.py
agente/app/providers/: bql_csv.py  bql_db.py  bql_gist.py  cboe.py  cheddarflow.py  cme.py  cta_positioning.py  damodaran.py  deepvue.py  elevenlabs_tts.py  finra_dark_pool.py  fred.py  gex_letf.py  global_liquidity.py  ibkr.py  market_data_chain.py  market_prices.py  market_prices_live.py  node_anatomy.py  occ.py  options.py  options_store.py  (+13 more)
agente/bloomberg_jupyter/: collect_fundamentals.py  collect_macro_series.py  collect_prices.py  export_utils.py  run_all_exports.py
agente/config/: settings.py
agente/core/: __init__.py  bloomberg_main_agent.py  csv_parser.py  data_normalizer.py  db_schema.py  db_writer.py  logger.py  zip_extractor.py  zip_scanner.py
agente/launcher/: create_desktop_shortcut.py  desktop_ui.py  run_bloomberg_agent.bat
agente/scripts/: bql_export.ipynb  bql_export.py  bql_export_headless.py  bql_fetch.py  bql_gex_flow.py  bql_receiver.py  bql_unzip.py  run_daily.bat  schedule_setup.py
agente/tests/: conftest.py  run_pipeline_with_writer.py  run_writer_real.py  test_audit.py  test_models.py  test_storage.py  test_utils.py  test_views.py  test_writer.py
(+55 files in other folders)
