[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agente-editorial"
version = "0.1.0"
description = "Agente editorial pessoal — Etapa 1: ingestão e curadoria"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "playwright>=1.43",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rich>=13.7",
    "python-ulid>=2.2",
    "pyyaml>=6.0",
    # ── Enrichment / Analysis ──────────────────────────────────────────────────
    "yfinance>=0.2",              # market prices & OHLCV history
    "pandas>=2.0",                # time-series analysis (technical, risk, MC)
    "numpy>=1.26",                # numerical computations
    "duckduckgo-search>=6.0",     # web search provider
    "pyecharts>=2.0",             # interactive charts (K-line, heatmap, radar)
    "openpyxl>=3.1",              # Excel export (.xlsx)
    "xlrd>=2.0",                  # Excel .xls legacy (Damodaran datasets)
    "python-docx>=1.1",           # Word document generation (writer)
    "trafilatura>=1.8",           # article body extraction (RSS feeds)
    "feedparser>=6.0",            # RSS/Atom feed parsing
    "anthropic>=0.25",            # Anthropic SDK (alternative client)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
